Update target name references for MSM8937
With the official announcement of msm8937, remove all
references to its internal code name msmthorium,
and replace them with msm8937. Also split the dts
files to have support for both pmi8950 and pmi8937.

Change-Id: Ibb47026477ee84bdcc8433450e8b1fd6e969cbbb
Signed-off-by: Prasad Sodagudi <psodagud@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/apq8937.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8937.dtsi
@@ -11,32 +11,9 @@
  * GNU General Public License for more details.
  */
 
-&soc {
-	qcom,ion {
-		compatible = "qcom,msm-ion";
-		#address-cells = <1>;
-		#size-cells = <0>;
-
-		qcom,ion-heap@25 {
-			reg = <25>;
-			qcom,ion-heap-type = "SYSTEM";
-		};
-
-		qcom,ion-heap@21 {
-			reg = <21>;
-			qcom,ion-heap-type = "SYSTEM_CONTIG";
-		};
-
-		qcom,ion-heap@8 { /* CP_MM HEAP */
-			reg = <8>;
-			memory-region = <&secure_mem>;
-			qcom,ion-heap-type = "SECURE_DMA";
-		};
-
-		qcom,ion-heap@27 { /* QSEECOM HEAP */
-			reg = <27>;
-			memory-region = <&qseecom_mem>;
-			qcom,ion-heap-type = "DMA";
-		};
-	};
+#include "msm8937.dtsi"
+/ {
+	model = "Qualcomm Technologies, Inc. APQ8937";
+	compatible = "qcom,apq8937";
+	qcom,msm-id = <295 0x0>;
 };
