--- a/arch/arm/boot/dts/qcom/Makefile
+++ b/arch/arm/boot/dts/qcom/Makefile
@@ -245,18 +245,17 @@ dtb-$(CONFIG_ARCH_MSM8920) += msm8920-pmi8937-cdp.dtb \
 	msm8920-pmi8940-qrd-sku7.dtb \
 	msm8920-pmi8950-ext-codec-cdp.dtb
 
-dtb-$(CONFIG_ARCH_MSM8940) += msm8940-pmi8937-cdp.dtb \
-	msm8940-pmi8937-mtp.dtb \
-	msm8940-pmi8950-cdp.dtb \
-	msm8940-pmi8950-mtp.dtb \
-	msm8940-pmi8937-rcm.dtb \
-	msm8940-pmi8950-rcm.dtb \
-	msm8940-pmi8950-qrd-sku6.dtb \
-	msm8940-pmi8950-qrd-sku7.dtb \
-	msm8940-pmi8950-ext-codec-cdp.dtb \
-	msm8940-pmi8940-mtp.dtb \
-	msm8940-pmi8940-cdp.dtb \
-	msm8940-pmi8940-rcm.dtb
+dtb-$(CONFIG_ARCH_MSM8937) += msm8937-rumi.dtb \
+	msm8937-pmi8950-cdp.dtb \
+	msm8937-pmi8937-cdp.dtb \
+	msm8937-pmi8950-mtp.dtb \
+	msm8937-pmi8937-mtp.dtb \
+	msm8937-pmi8950-rcm.dtb \
+	msm8937-pmi8937-rcm.dtb \
+	apq8937-pmi8950-cdp.dtb \
+	apq8937-pmi8937-cdp.dtb \
+	apq8937-pmi8950-mtp.dtb \
+	apq8937-pmi8937-mtp.dtb
 
 dtb-$(CONFIG_ARCH_MSM8953) += msm8953-sim.dtb \
 	msm8953-rumi.dtb \
