--- a/arch/arm/boot/dts/qcom/apq8937-pmi8950-cdp.dts
+++ b/arch/arm/boot/dts/qcom/apq8937-pmi8950-cdp.dts
@@ -11,32 +11,14 @@
  * GNU General Public License for more details.
  */
 
-&soc {
-	qcom,ion {
-		compatible = "qcom,msm-ion";
-		#address-cells = <1>;
-		#size-cells = <0>;
+/dts-v1/;
 
-		qcom,ion-heap@25 {
-			reg = <25>;
-			qcom,ion-heap-type = "SYSTEM";
-		};
+#include "apq8937.dtsi"
+#include "msm8937-pmi8950-cdp.dtsi"
 
-		qcom,ion-heap@21 {
-			reg = <21>;
-			qcom,ion-heap-type = "SYSTEM_CONTIG";
-		};
-
-		qcom,ion-heap@8 { /* CP_MM HEAP */
-			reg = <8>;
-			memory-region = <&secure_mem>;
-			qcom,ion-heap-type = "SECURE_DMA";
-		};
-
-		qcom,ion-heap@27 { /* QSEECOM HEAP */
-			reg = <27>;
-			memory-region = <&qseecom_mem>;
-			qcom,ion-heap-type = "DMA";
-		};
-	};
+/ {
+	model = "Qualcomm Technologies, Inc. APQ8937-PMI8950 CDP";
+	compatible = "qcom,apq8937-cdp", "qcom,apq8937", "qcom,cdp";
+	qcom,board-id= <1 0>;
+	qcom,pmic-id = <0x10019 0x010011 0x0 0x0>;
 };
