--- a/arch/arm/configs/msmcortex_defconfig
+++ b/arch/arm/configs/msmcortex_defconfig
@@ -36,9 +36,10 @@ CONFIG_MODULE_SIG=y
 CONFIG_MODULE_SIG_SHA512=y
 # CONFIG_BLK_DEV_BSG is not set
 CONFIG_PARTITION_ADVANCED=y
-# CONFIG_IOSCHED_DEADLINE is not set
-CONFIG_ARCH_QCOM=y
-CONFIG_ARCH_SDM660=y
+CONFIG_ARCH_MSM=y
+CONFIG_ARCH_MSM8916=y
+CONFIG_ARCH_MSM8937=y
+CONFIG_ARCH_MSMTITANIUM=y
 CONFIG_SMP=y
 CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=8
@@ -286,10 +287,11 @@ CONFIG_SLIMBUS_MSM_NGD=y
 CONFIG_SOUNDWIRE=y
 CONFIG_SPI=y
 CONFIG_SPI_QUP=y
-CONFIG_SPI_SPIDEV=y
-CONFIG_SPMI=y
-CONFIG_PINCTRL_MSM8998=y
-CONFIG_PINCTRL_SDM660=y
+CONFIG_SPI_SPIDEV=m
+CONFIG_PINCTRL_MSM8952=y
+CONFIG_PINCTRL_MSM8937=y
+CONFIG_PINCTRL_MSMTITANIUM=y
+CONFIG_DEBUG_GPIO=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_QPNP_PIN=y
 CONFIG_POWER_SUPPLY=y
