--- a/arch/arm/boot/dts/qcom/msm8937-vidc.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8937-vidc.dtsi
@@ -28,7 +28,7 @@
 		qcom,slave-side-cp;
 		qcom,dcvs-tbl =
 			<108000 108000 244800 0x00000004>, /* Encoder */
-			<108000 108000 244800 0x0c000000>; /* Decoder */
+			<108000 108000 244800 0x0f00000c>; /* Decoder */
 		qcom,dcvs-limit =
 			<8160 30>, /* Encoder */
 			<8160 30>; /* Decoder */
@@ -44,8 +44,8 @@
 			<0x9181000 0x1000>;
 		qcom,max-hw-load = <352800>; /* 1080p@30 + 720p@30 */
 		qcom,firmware-name = "venus";
-		qcom,allowed-clock-rates = <360000000 329140000
-			308570000 270000000 200000000>;
+		qcom,allowed-clock-rates = <360000000 320000000
+			308570000 240000000 166150000>;
 		qcom,clock-freq-tbl {
 			qcom,profile-enc {
 				qcom,codec-mask = <0x55555555>;
