--- a/arch/arm/boot/dts/qcom/apq8917.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8917.dtsi
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, The Linux Foundation. All rights reserved.
+ * Copyright (c) 2015-2016, The Linux Foundation. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -11,32 +11,9 @@
  * GNU General Public License for more details.
  */
 
-&int_codec {
-	status = "okay";
-	qcom,model = "msm8952-snd-card-mtp";
-	qcom,msm-hs-micbias-type = "external";
-};
-
-&pm8937_cajon_dig {
-	status = "okay";
-};
-
-&pm8937_cajon_analog {
-	status = "okay";
-};
-
-&wsa881x_i2c_e {
-	status = "okay";
-};
-
-&wsa881x_i2c_44 {
-	status = "okay";
-};
-
-&wsa881x_i2c_f {
-	status = "okay";
-};
-
-&wsa881x_i2c_45 {
-	status = "okay";
+#include "msm8917.dtsi"
+/ {
+	model = "Qualcomm Technologies, Inc. APQ8917";
+	compatible = "qcom,apq8917";
+	qcom,msm-id = <307 0x0>;
 };
