--- a/arch/arm/boot/dts/qcom/msm8917-mdss-pll.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8917-mdss-pll.dtsi
@@ -1,5 +1,4 @@
-/*
- * Copyright (c) 2015, The Linux Foundation. All rights reserved.
+/* Copyright (c) 2015-2016, The Linux Foundation. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -11,32 +10,9 @@
  * GNU General Public License for more details.
  */
 
-&int_codec {
-	status = "okay";
-	qcom,model = "msm8952-snd-card-mtp";
-	qcom,msm-hs-micbias-type = "external";
-};
+#include "msm8937-mdss-pll.dtsi"
 
-&pm8937_cajon_dig {
-	status = "okay";
+&mdss_dsi0_pll {
+	vddio-supply = <&pm8917_l6>;
 };
-
-&pm8937_cajon_analog {
-	status = "okay";
-};
-
-&wsa881x_i2c_e {
-	status = "okay";
-};
-
-&wsa881x_i2c_44 {
-	status = "okay";
-};
-
-&wsa881x_i2c_f {
-	status = "okay";
-};
-
-&wsa881x_i2c_45 {
-	status = "okay";
-};
+/delete-node/ &mdss_dsi1_pll;
