--- a/arch/arm/boot/dts/qcom/msm8917-pmi8937-qrd-sku5.dts
+++ b/arch/arm/boot/dts/qcom/msm8917-pmi8937-qrd-sku5.dts
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, The Linux Foundation. All rights reserved.
+ * Copyright (c) 2016, The Linux Foundation. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -11,32 +11,18 @@
  * GNU General Public License for more details.
  */
 
+/dts-v1/;
+
+#include "msm8917.dtsi"
+#include "msm8917-pmi8937-qrd-sku5.dtsi"
+
+/ {
+	model = "Qualcomm Technologies, Inc. MSM8917-PMI8937 QRD SKU5";
+	compatible = "qcom,msm8917-qrd-sku5", "qcom,msm8917-qrd",
+		   "qcom,msm8917", "qcom,qrd";
+	qcom,board-id= <0x1000b 0>;
+};
+
 &int_codec {
-	status = "okay";
-	qcom,model = "msm8952-snd-card-mtp";
-	qcom,msm-hs-micbias-type = "external";
-};
-
-&pm8937_cajon_dig {
-	status = "okay";
-};
-
-&pm8937_cajon_analog {
-	status = "okay";
-};
-
-&wsa881x_i2c_e {
-	status = "okay";
-};
-
-&wsa881x_i2c_44 {
-	status = "okay";
-};
-
-&wsa881x_i2c_f {
-	status = "okay";
-};
-
-&wsa881x_i2c_45 {
-	status = "okay";
+	qcom,model = "msm8952-sku2-snd-card";
 };
