--- a/arch/arm/boot/dts/qcom/msm8917-pmi8950-cdp.dts
+++ b/arch/arm/boot/dts/qcom/msm8917-pmi8950-cdp.dts
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, The Linux Foundation. All rights reserved.
+ * Copyright (c) 2015-2016, The Linux Foundation. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -11,32 +11,14 @@
  * GNU General Public License for more details.
  */
 
-&int_codec {
-	status = "okay";
-	qcom,model = "msm8952-snd-card-mtp";
-	qcom,msm-hs-micbias-type = "external";
-};
+/dts-v1/;
 
-&pm8937_cajon_dig {
-	status = "okay";
-};
+#include "msm8917.dtsi"
+#include "msm8917-pmi8950-cdp.dtsi"
 
-&pm8937_cajon_analog {
-	status = "okay";
-};
-
-&wsa881x_i2c_e {
-	status = "okay";
-};
-
-&wsa881x_i2c_44 {
-	status = "okay";
-};
-
-&wsa881x_i2c_f {
-	status = "okay";
-};
-
-&wsa881x_i2c_45 {
-	status = "okay";
+/ {
+	model = "Qualcomm Technologies, Inc. MSM8917-PMI8950 CDP";
+	compatible = "qcom,msm8917-cdp", "qcom,msm8917", "qcom,cdp";
+	qcom,board-id= <1 0>;
+	qcom,pmic-id = <0x10019 0x010011 0x0 0x0>;
 };
