--- a/drivers/pinctrl/qcom/Kconfig
+++ b/drivers/pinctrl/qcom/Kconfig
@@ -112,13 +112,13 @@ config PINCTRL_MSM8996
 	  This is the pinctrl, pinmux, pinconf and gpiolib driver for the
 	  Qualcomm TLMM block found in the Qualcomm MSM8996 platform.
 
-config PINCTRL_SDM660
-	tristate "Qualcomm SDM660 pin controller driver"
-	depends on GPIOLIB && OF
+config PINCTRL_MSM8917
+	tristate "QTI MSM8917 pin controller driver"
+	depends on GPIOLIB && OF && (ARCH_MSM8917 || COMPILE_TEST)
 	select PINCTRL_MSM
 	help
 	  This is the pinctrl, pinmux, pinconf and gpiolib driver for the
-	  Qualcomm TLMM block found in the Qualcomm SDM660 platform.
+	  QTI TLMM block found in the QTI MSM8917 platform.
 
 config PINCTRL_WCD
 	tristate "Qualcomm Technologies, Inc WCD pin controller driver"
