--- a/drivers/pinctrl/qcom/Makefile
+++ b/drivers/pinctrl/qcom/Makefile
@@ -13,7 +13,11 @@ obj-$(CONFIG_PINCTRL_QCOM_SPMI_PMIC) += pinctrl-spmi-mpp.o
 obj-$(CONFIG_PINCTRL_QCOM_SSBI_PMIC) += pinctrl-ssbi-gpio.o
 obj-$(CONFIG_PINCTRL_QCOM_SSBI_PMIC) += pinctrl-ssbi-mpp.o
 obj-$(CONFIG_PINCTRL_MSM8996)	+= pinctrl-msm8996.o
-obj-$(CONFIG_PINCTRL_MSM8998)	+= pinctrl-msm8998.o
-obj-$(CONFIG_PINCTRL_SDM660)	+= pinctrl-sdm660.o
-obj-$(CONFIG_PINCTRL_WCD)	+= pinctrl-wcd.o
-obj-$(CONFIG_PINCTRL_LPI)	+= pinctrl-lpi.o
+obj-$(CONFIG_PINCTRL_MSM8952)	+= pinctrl-msm8952.o
+obj-$(CONFIG_PINCTRL_MSM8917)	+= pinctrl-msm8917.o
+obj-$(CONFIG_PINCTRL_MSM8937)	+= pinctrl-msm8937.o
+obj-$(CONFIG_PINCTRL_MSMCOBALT)	+= pinctrl-msmcobalt.o
+obj-$(CONFIG_PINCTRL_MSM8953)	+= pinctrl-msm8953.o
+obj-$(CONFIG_PINCTRL_MDM9607)	+= pinctrl-mdm9607.o
+obj-$(CONFIG_PINCTRL_MDMCALIFORNIUM)   += pinctrl-mdmcalifornium.o
+obj-$(CONFIG_PINCTRL_MSM8909)	+= pinctrl-msm8909.o
