ARM: dts: msm: Add initial device tree support for msm8917 tmo
Add new device tree files for msm8917 qrd tmo.

Change-Id: Id489db65d5993b7ee5024532aad6386bec2f973a
Signed-off-by: Wufeng <wufeng.jiang@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8917-qgp-tmo.dts
+++ b/arch/arm/boot/dts/qcom/msm8917-qgp-tmo.dts
@@ -11,10 +11,14 @@
  * GNU General Public License for more details.
  */
 
-#include "msm-pmi8937.dtsi"
-#include "msm8917-qrd.dtsi"
+/dts-v1/;
 
-&soc {
-	led_flash0: qcom,camera-flash {
-	};
+#include "msm8917.dtsi"
+#include "msm8917-qgp-tmo.dtsi"
+
+/ {
+	model = "Qualcomm Technologies, Inc. MSM8917-PMI8937 QGP TMO";
+	compatible = "qcom,msm8917-qgp-tmo", "qcom,msm8917-qrd",
+		   "qcom,msm8917", "qcom,qrd";
+	qcom,board-id= <0x1000b 0x0a>;
 };
