--- a/arch/arm/boot/dts/qcom/msm8937-camera.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8937-camera.dtsi
@@ -70,13 +70,13 @@
 	qcom,csid@1b30000  {
 		status = "ok";
 		cell-index = <0>;
-		compatible = "qcom,csid-v3.4.3", "qcom,csid";
+		compatible = "qcom,csid-v3.4.2", "qcom,csid";
 		reg = <0x1b30000 0x400>;
 		reg-names = "csid";
 		interrupts = <0 51 0>;
 		interrupt-names = "csid";
 		qcom,csi-vdd-voltage = <1200000>;
-		qcom,mipi-csi-vdd-supply = <&pm8917_l2>;
+		qcom,mipi-csi-vdd-supply = <&pm8937_l2>;
 		clocks = <&clock_gcc clk_gcc_camss_top_ahb_clk>,
 			<&clock_gcc clk_gcc_camss_ispif_ahb_clk>,
 			<&clock_gcc clk_gcc_camss_csi0_ahb_clk>,
@@ -95,13 +95,13 @@
 	qcom,csid@1b30400 {
 		status = "ok";
 		cell-index = <1>;
-		compatible = "qcom,csid-v3.4.3", "qcom,csid";
+		compatible = "qcom,csid-v3.4.2", "qcom,csid";
 		reg = <0x1b30400 0x400>;
 		reg-names = "csid";
 		interrupts = <0 52 0>;
 		interrupt-names = "csid";
 		qcom,csi-vdd-voltage = <1200000>;
-		qcom,mipi-csi-vdd-supply = <&pm8917_l2>;
+		qcom,mipi-csi-vdd-supply = <&pm8937_l2>;
 		clocks = <&clock_gcc clk_gcc_camss_top_ahb_clk>,
 			<&clock_gcc clk_gcc_camss_ispif_ahb_clk>,
 			<&clock_gcc clk_gcc_camss_csi1_ahb_clk>,
@@ -120,13 +120,13 @@
 	qcom,csid@1b30800 {
 		status = "ok";
 		cell-index = <2>;
-		compatible = "qcom,csid-v3.4.3", "qcom,csid";
+		compatible = "qcom,csid-v3.4.2", "qcom,csid";
 		reg = <0x1b30800 0x400>;
 		reg-names = "csid";
 		interrupts = <0 153 0>;
 		interrupt-names = "csid";
 		qcom,csi-vdd-voltage = <1200000>;
-		qcom,mipi-csi-vdd-supply = <&pm8917_l2>;
+		qcom,mipi-csi-vdd-supply = <&pm8937_l2>;
 		clocks = <&clock_gcc clk_gcc_camss_top_ahb_clk>,
 			<&clock_gcc clk_gcc_camss_ispif_ahb_clk>,
 			<&clock_gcc clk_gcc_camss_csi2_ahb_clk>,
@@ -151,8 +151,9 @@
 		interrupts = <0 55 0>;
 		interrupt-names = "ispif";
 		qcom,num-isps = <0x2>;
-		vfe0_vdd_supply = <&gdsc_vfe>;
-		vfe1_vdd_supply = <&gdsc_vfe1>;
+		vfe0-vdd-supply = <&gdsc_vfe>;
+		vfe1-vdd-supply = <&gdsc_vfe1>;
+		qcom,vdd-names = "vfe0-vdd", "vfe1-vdd";
 		clocks = <&clock_gcc clk_gcc_camss_ispif_ahb_clk>,
 			<&clock_gcc clk_gcc_camss_ahb_clk>,
 			<&clock_gcc clk_gcc_camss_top_ahb_clk>,
@@ -360,13 +361,13 @@
 		qcom,clock-rates = <266670000 0 0 0 0>;
 		qcom,qos-reg-settings = <0x28 0x0000555e>,
 			<0xc8 0x00005555>;
+		qcom,vbif-reg-settings = <0xc0 0x10101000>,
+			<0xb0 0x10100010>;
 		qcom,msm-bus,name = "msm_camera_jpeg0";
 		qcom,msm-bus,num-cases = <2>;
 		qcom,msm-bus,num-paths = <1>;
 		qcom,msm-bus,vectors-KBps = <62 512 0 0>,
-			<62 512 666675 666675>;
-		qcom,vbif-reg-settings = <0xc0 0x10101000>,
-			<0xb0 0x10100010>;
+			<62 512 800000 800000>;
 	};
 
 	qcom,irqrouter@1b00000 {
@@ -382,8 +383,8 @@
 		cell-index = <0>;
 		compatible = "qcom,cpp";
 		reg = <0x1b04000 0x100>,
-			<0x1b80000 0x3000>,
-			<0x1b18000 0x4000>,
+			<0x1b80000 0x200>,
+			<0x1b18000 0x018>,
 			<0x1858078 0x4>;
 		reg-names = "cpp", "cpp_vbif", "cpp_hw", "camss_cpp";
 		interrupts = <0 49 0>;
