--- a/arch/arm/boot/dts/qcom/msm8952-camera.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8952-camera.dtsi
@@ -14,18 +14,18 @@
 &soc {
 	qcom,msm-cam@1b00000 {
 		compatible = "qcom,msm-cam";
-		reg = <0x1b00000 0x40000>;
+		reg = <0x8c0000 0x40000>;
 		reg-names = "msm-cam";
 		status = "ok";
 		bus-vectors = "suspend", "svs", "nominal", "turbo";
-		qcom,bus-votes = <0 160000000 320000000 320000000>;
+		qcom,bus-votes = <0 320000000 640000000 640000000>;
 	};
 
-	qcom,csiphy@1b34000 {
+	qcom,csiphy@1b0ac00 {
 		status = "ok";
 		cell-index = <0>;
-		compatible = "qcom,csiphy-v3.4.2", "qcom,csiphy";
-		reg = <0x1b34000 0x1000>,
+		compatible = "qcom,csiphy-v3.1", "qcom,csiphy";
+		reg = <0x1b0ac00 0x200>,
 			<0x1b00030 0x4>;
 		reg-names = "csiphy", "csiphy_clk_mux";
 		interrupts = <0 78 0>;
@@ -41,14 +41,14 @@
 			"csiphy_timer_src_clk", "csiphy_timer_clk",
 			"camss_ahb_src", "csi_phy_clk",
 			"camss_ahb_clk";
-		qcom,clock-rates = <0 61540000 200000000 0 0 0 0>;
+		qcom,clock-rates = <0 61540000 160000000 0 0 0 0>;
 	};
 
-	qcom,csiphy@1b35000 {
+	qcom,csiphy@1b0b000 {
 		status = "ok";
 		cell-index = <1>;
-		compatible = "qcom,csiphy-v3.4.2", "qcom,csiphy";
-		reg = <0x1b35000 0x1000>,
+		compatible = "qcom,csiphy-v3.1", "qcom,csiphy";
+		reg = <0x1b0b000 0x200>,
 			<0x1b00038 0x4>;
 		reg-names = "csiphy", "csiphy_clk_mux";
 		interrupts = <0 79 0>;
@@ -64,19 +64,19 @@
 			"csiphy_timer_src_clk", "csiphy_timer_clk",
 			"camss_ahb_src", "csi_phy_clk",
 			"camss_ahb_clk";
-		qcom,clock-rates = <0 61540000 200000000 0 0 0 0>;
+		qcom,clock-rates = <0 61540000 160000000 0 0 0 0>;
 	};
 
-	qcom,csid@1b30000  {
+	qcom,csid@1b08000  {
 		status = "ok";
 		cell-index = <0>;
-		compatible = "qcom,csid-v3.4.3", "qcom,csid";
-		reg = <0x1b30000 0x400>;
+		compatible = "qcom,csid-v3.4.1", "qcom,csid";
+		reg = <0x1b08000 0x100>;
 		reg-names = "csid";
 		interrupts = <0 51 0>;
 		interrupt-names = "csid";
 		qcom,csi-vdd-voltage = <1200000>;
-		qcom,mipi-csi-vdd-supply = <&pm8917_l2>;
+		qcom,mipi-csi-vdd-supply = <&pm8950_l2>;
 		clocks = <&clock_gcc clk_gcc_camss_top_ahb_clk>,
 			<&clock_gcc clk_gcc_camss_ispif_ahb_clk>,
 			<&clock_gcc clk_gcc_camss_csi0_ahb_clk>,
@@ -89,19 +89,19 @@
 			"ispif_ahb_clk", "csi_ahb_clk", "csi_src_clk",
 			"csi_clk",  "csi_pix_clk",
 			"csi_rdi_clk", "camss_ahb_clk";
-		qcom,clock-rates = <0 61540000 0 200000000 0 0 0 0>;
+		qcom,clock-rates = <0 61540000 0 160000000 0 0 0 0>;
 	};
 
-	qcom,csid@1b30400 {
+	qcom,csid@1b08400 {
 		status = "ok";
 		cell-index = <1>;
-		compatible = "qcom,csid-v3.4.3", "qcom,csid";
-		reg = <0x1b30400 0x400>;
+		compatible = "qcom,csid-v3.4.1", "qcom,csid";
+		reg = <0x1b08400 0x100>;
 		reg-names = "csid";
 		interrupts = <0 52 0>;
 		interrupt-names = "csid";
 		qcom,csi-vdd-voltage = <1200000>;
-		qcom,mipi-csi-vdd-supply = <&pm8917_l2>;
+		qcom,mipi-csi-vdd-supply = <&pm8950_l2>;
 		clocks = <&clock_gcc clk_gcc_camss_top_ahb_clk>,
 			<&clock_gcc clk_gcc_camss_ispif_ahb_clk>,
 			<&clock_gcc clk_gcc_camss_csi1_ahb_clk>,
@@ -114,19 +114,19 @@
 			"ispif_ahb_clk", "csi_ahb_clk", "csi_src_clk",
 			"csi_clk", "csi_pix_clk",
 			"csi_rdi_clk", "camss_ahb_clk";
-		qcom,clock-rates = <0 61540000 0 200000000 0 0 0 0>;
+		qcom,clock-rates = <0 61540000 0 160000000 0 0 0 0>;
 	};
 
-	qcom,csid@1b30800 {
+	qcom,csid@1b08800 {
 		status = "ok";
 		cell-index = <2>;
-		compatible = "qcom,csid-v3.4.3", "qcom,csid";
-		reg = <0x1b30800 0x400>;
+		compatible = "qcom,csid-v3.4.1", "qcom,csid";
+		reg = <0x1b08800 0x100>;
 		reg-names = "csid";
 		interrupts = <0 153 0>;
 		interrupt-names = "csid";
 		qcom,csi-vdd-voltage = <1200000>;
-		qcom,mipi-csi-vdd-supply = <&pm8917_l2>;
+		qcom,mipi-csi-vdd-supply = <&pm8950_l2>;
 		clocks = <&clock_gcc clk_gcc_camss_top_ahb_clk>,
 			<&clock_gcc clk_gcc_camss_ispif_ahb_clk>,
 			<&clock_gcc clk_gcc_camss_csi2_ahb_clk>,
@@ -139,13 +139,13 @@
 			"ispif_ahb_clk", "csi_ahb_clk", "csi_src_clk",
 			"csi_clk", "csi_pix_clk",
 			"csi_rdi_clk", "camss_ahb_clk";
-		qcom,clock-rates = <0 61540000 0 200000000 0 0 0 0>;
+		qcom,clock-rates = <0 61540000 0 160000000 0 0 0 0>;
 	};
 
-	qcom,ispif@1b31000 {
+	qcom,ispif@1b0a000 {
 		cell-index = <0>;
 		compatible = "qcom,ispif-v3.0", "qcom,ispif";
-		reg = <0x1b31000 0x500>,
+		reg = <0x1b0a000 0x500>,
 			<0x1b00020 0x10>;
 		reg-names = "ispif", "csi_clk_mux";
 		interrupts = <0 55 0>;
@@ -154,9 +154,6 @@
 		vfe0_vdd_supply = <&gdsc_vfe>;
 		vfe1_vdd_supply = <&gdsc_vfe1>;
 		clocks = <&clock_gcc clk_gcc_camss_ispif_ahb_clk>,
-			<&clock_gcc clk_gcc_camss_ahb_clk>,
-			<&clock_gcc clk_gcc_camss_top_ahb_clk>,
-			<&clock_gcc clk_camss_top_ahb_clk_src>,
 			<&clock_gcc clk_csi0_clk_src>,
 			<&clock_gcc clk_gcc_camss_csi0_clk>,
 			<&clock_gcc clk_gcc_camss_csi0rdi_clk>,
@@ -176,32 +173,31 @@
 			<&clock_gcc clk_gcc_camss_vfe1_clk>,
 			<&clock_gcc clk_gcc_camss_csi_vfe1_clk>;
 		clock-names = "ispif_ahb_clk",
-			"camss_ahb_clk", "camss_top_ahb_clk",
-			"camss_ahb_src",
 			"csi0_src_clk", "csi0_clk",
 			"csi0_rdi_clk", "csi0_pix_clk",
 			"csi1_src_clk", "csi1_clk",
 			"csi1_rdi_clk", "csi1_pix_clk",
 			"csi2_src_clk", "csi2_clk",
 			"csi2_rdi_clk", "csi2_pix_clk",
-			"vfe0_clk_src", "camss_vfe_vfe0_clk",
-			"camss_csi_vfe0_clk", "vfe1_clk_src",
-			"camss_vfe_vfe1_clk", "camss_csi_vfe1_clk";
-		qcom,clock-rates = <61540000 0 0 0
-			200000000 0 0 0
-			200000000 0 0 0
-			200000000 0 0 0
+			"vfe0_clk_src", "camss_vfe_vfe0_clk", "camss_csi_vfe0_clk",
+			"vfe1_clk_src", "camss_vfe_vfe1_clk", "camss_csi_vfe1_clk";
+		qcom,clock-rates = <61540000
+			0 0 0 0
+			0 0 0 0
+			0 0 0 0
 			0 0 0
 			0 0 0>;
 		qcom,clock-cntl-support;
-		qcom,clock-control = "SET_RATE","NO_SET_RATE", "NO_SET_RATE",
-			"NO_SET_RATE", "SET_RATE", "NO_SET_RATE",
-			"NO_SET_RATE", "NO_SET_RATE", "SET_RATE",
+		qcom,clock-control = "SET_RATE",
+			"INIT_RATE",
 			"NO_SET_RATE", "NO_SET_RATE", "NO_SET_RATE",
-			"SET_RATE", "NO_SET_RATE", "NO_SET_RATE",
-			"NO_SET_RATE", "INIT_RATE", "NO_SET_RATE",
-			"NO_SET_RATE", "INIT_RATE", "NO_SET_RATE",
-			"NO_SET_RATE";
+			"INIT_RATE",
+			"NO_SET_RATE", "NO_SET_RATE", "NO_SET_RATE",
+			"INIT_RATE",
+			"NO_SET_RATE", "NO_SET_RATE", "NO_SET_RATE",
+			"INIT_RATE",
+			"NO_SET_RATE", "NO_SET_RATE",
+			"INIT_RATE", "NO_SET_RATE", "NO_SET_RATE";
 	};
 
 	vfe0: qcom,vfe0@1b10000 {
@@ -229,11 +225,11 @@
 		qos-entries = <8>;
 		qos-regs = <0x2c4 0x2c8 0x2cc 0x2d0 0x2d4 0x2d8
 			0x2dc 0x2e0>;
-		qos-settings = <0xaa55aa55
-			0xaa55aa55	0xaa55aa55
-			0xaa55aa55	0xaa55aa55
-			0xaa55aa55	0xaa55aa55
-			0xaa55aa55>;
+		qos-settings = <0xA555A555
+			0xA555A555	0xA555A555
+			0xA555A555	0xA555A555
+			0xA555A555	0xA555A555
+			0x0001A555>;
 		vbif-entries = <1>;
 		vbif-regs = <0x124>;
 		vbif-settings = <0x3>;
@@ -241,17 +237,17 @@
 		ds-regs = <0x988 0x98c 0x990 0x994 0x998
 			0x99c 0x9a0 0x9a4 0x9a8 0x9ac 0x9b0
 			0x9b4 0x9b8 0x9bc 0x9c0 0x9c4 0x9c8>;
-		ds-settings = <0xcccc1111
-			0xcccc1111	0xcccc1111
-			0xcccc1111	0xcccc1111
-			0xcccc1111	0xcccc1111
-			0xcccc1111	0xcccc1111
-			0xcccc1111	0xcccc1111
-			0xcccc1111	0xcccc1111
-			0xcccc1111	0xcccc1111
-			0xcccc1111	0x00000110>;
-		max-clk-nominal = <400000000>;
-		max-clk-turbo = <432000000>;
+		ds-settings = <0xCCCC1111
+			0xCCCC1111	0xCCCC1111
+			0xCCCC1111	0xCCCC1111
+			0xCCCC1111	0xCCCC1111
+			0xCCCC1111	0xCCCC1111
+			0xCCCC1111	0xCCCC1111
+			0xCCCC1111	0xCCCC1111
+			0xCCCC1111	0xCCCC1111
+			0xCCCC1111	0x00000103>;
+		max-clk-nominal = <308570000>;
+		max-clk-turbo = <360000000>;
 	};
 
 	vfe1: qcom,vfe1@1b14000 {
@@ -279,11 +275,11 @@
 		qos-entries = <8>;
 		qos-regs = <0x2c4 0x2c8 0x2cc 0x2d0 0x2d4 0x2d8
 			0x2dc 0x2e0>;
-		qos-settings = <0xaa55aa55
-			0xaa55aa55	0xaa55aa55
-			0xaa55aa55	0xaa55aa55
-			0xaa55aa55	0xaa55aa55
-			0xaa55aa55>;
+		qos-settings = <0xA555A555
+			0xA555A555	0xA555A555
+			0xA555A555	0xA555A555
+			0xA555A555	0xA555A555
+			0x0001A555>;
 		vbif-entries = <1>;
 		vbif-regs = <0x124>;
 		vbif-settings = <0x3>;
@@ -291,17 +287,17 @@
 		ds-regs = <0x988 0x98c 0x990 0x994 0x998
 			0x99c 0x9a0 0x9a4 0x9a8 0x9ac 0x9b0
 			0x9b4 0x9b8 0x9bc 0x9c0 0x9c4 0x9c8>;
-		ds-settings = <0xcccc1111
-			0xcccc1111	0xcccc1111
-			0xcccc1111	0xcccc1111
-			0xcccc1111	0xcccc1111
-			0xcccc1111	0xcccc1111
-			0xcccc1111	0xcccc1111
-			0xcccc1111	0xcccc1111
-			0xcccc1111	0xcccc1111
-			0xcccc1111	0x00000110>;
-		max-clk-nominal = <400000000>;
-		max-clk-turbo = <432000000>;
+		ds-settings = <0xCCCC1111
+			0xCCCC1111	0xCCCC1111
+			0xCCCC1111	0xCCCC1111
+			0xCCCC1111	0xCCCC1111
+			0xCCCC1111	0xCCCC1111
+			0xCCCC1111	0xCCCC1111
+			0xCCCC1111	0xCCCC1111
+			0xCCCC1111	0xCCCC1111
+			0xCCCC1111	0x00000103>;
+		max-clk-nominal = <308570000>;
+		max-clk-turbo = <360000000>;
 	};
 
 	qcom,vfe {
@@ -315,26 +311,20 @@
 		msm_cam_smmu_cb1: msm_cam_smmu_cb1 {
 			compatible = "qcom,qsmmu-cam-cb";
 			iommus = <&apps_iommu 0x400>,
-				<&apps_iommu 0x2400>;
+						<&apps_iommu 0x3000>;
 			label = "vfe";
 			qcom,scratch-buf-support;
 		};
 
-		msm_cam_smmu_cb2: msm_cam_smmu_cb2 {
-			compatible = "qcom,qsmmu-cam-cb";
-			label = "vfe_secure";
-			qcom,secure-context;
-		};
-
 		msm_cam_smmu_cb3: msm_cam_smmu_cb3 {
 			compatible = "qcom,qsmmu-cam-cb";
-			iommus = <&apps_iommu 0x1c00>;
+			iommus = <&apps_iommu 0x2400>;
 			label = "cpp";
 		};
 
 		msm_cam_smmu_cb4: msm_cam_smmu_cb4 {
 			compatible = "qcom,qsmmu-cam-cb";
-			iommus = <&apps_iommu 0x1800>;
+			iommus = <&apps_iommu 0x2000>;
 			label = "jpeg_enc0";
 		};
 	};
@@ -345,11 +335,10 @@
 		compatible = "qcom,jpeg";
 		reg = <0x1b1c000 0x400>,
 			<0x1b60000 0xc30>;
-		reg-names = "jpeg_hw", "jpeg_vbif";
+		reg-names = "jpeg";
 		interrupts = <0 59 0>;
 		interrupt-names = "jpeg";
 		vdd-supply = <&gdsc_jpeg>;
-		qcom,vdd-names = "vdd";
 		clock-names =  "core_clk", "iface_clk", "bus_clk0",
 			"camss_top_ahb_clk", "camss_ahb_clk";
 		clocks = <&clock_gcc clk_gcc_camss_jpeg0_clk>,
@@ -358,15 +347,10 @@
 			<&clock_gcc clk_gcc_camss_top_ahb_clk>,
 			<&clock_gcc clk_gcc_camss_ahb_clk>;
 		qcom,clock-rates = <266670000 0 0 0 0>;
-		qcom,qos-reg-settings = <0x28 0x0000555e>,
-			<0xc8 0x00005555>;
-		qcom,msm-bus,name = "msm_camera_jpeg0";
-		qcom,msm-bus,num-cases = <2>;
-		qcom,msm-bus,num-paths = <1>;
-		qcom,msm-bus,vectors-KBps = <62 512 0 0>,
-			<62 512 666675 666675>;
-		qcom,vbif-reg-settings = <0xc0 0x10101000>,
-			<0xb0 0x10100010>;
+		qos-reg-settings = <0x28 0x0000550E>,
+			<0xC8 0x00005555>;
+		vbif-reg-settings = <0xC0 0x10101000>,
+			<0xB0 0x10100010>;
 	};
 
 	qcom,irqrouter@1b00000 {
@@ -382,14 +366,12 @@
 		cell-index = <0>;
 		compatible = "qcom,cpp";
 		reg = <0x1b04000 0x100>,
-			<0x1b80000 0x3000>,
-			<0x1b18000 0x4000>,
-			<0x1858078 0x4>;
-		reg-names = "cpp", "cpp_vbif", "cpp_hw", "camss_cpp";
+			<0x1b80000 0x200>,
+			<0x1b18000 0x018>;
+		reg-names = "cpp", "cpp_vbif", "cpp_hw";
 		interrupts = <0 49 0>;
 		interrupt-names = "cpp";
 		vdd-supply = <&gdsc_cpp>;
-		qcom,vdd-names = "vdd";
 		clocks = <&clock_gcc clk_gcc_camss_top_ahb_clk>,
 			<&clock_gcc clk_cpp_clk_src>,
 			<&clock_gcc clk_gcc_camss_cpp_ahb_clk>,
@@ -401,15 +383,8 @@
 			"camss_vfe_cpp_ahb_clk", "camss_vfe_cpp_axi_clk",
 			"camss_vfe_cpp_clk","micro_iface_clk", "camss_ahb_clk";
 		qcom,clock-rates = <0 180000000 0 0 180000000 0 0>;
-		qcom,min-clock-rate = <133000000>;
-		qcom,bus-master = <1>;
-		qcom,msm-bus,name = "msm_camera_cpp";
-		qcom,msm-bus,num-cases = <2>;
-		qcom,msm-bus,num-paths = <1>;
-		qcom,msm-bus,vectors-KBps =
-			<106 512 0 0>,
-			<106 512 0 0>;
-		qcom,msm-bus-vector-dyn-vote;
+		qcom,min-clock-rate = <133330000>;
+		bus_master = <1>;
 		qcom,cpp-fw-payload-info {
 			qcom,stripe-base = <156>;
 			qcom,plane-base = <141>;
@@ -424,7 +399,7 @@
 		status = "ok";
 		cell-index = <0>;
 		compatible = "qcom,cci";
-		reg = <0x1b0c000 0x4000>;
+		reg = <0x1b0c000 0x1000>;
 		#address-cells = <1>;
 		#size-cells = <0>;
 		reg-names = "cci";
@@ -444,10 +419,10 @@
 		pinctrl-names = "cci_default", "cci_suspend";
 			pinctrl-0 = <&cci0_active &cci1_active>;
 			pinctrl-1 = <&cci0_suspend &cci1_suspend>;
-		gpios = <&tlmm 29 0>,
-			<&tlmm 30 0>,
-			<&tlmm 31 0>,
-			<&tlmm 32 0>;
+		gpios = <&msm_gpio 29 0>,
+			<&msm_gpio 30 0>,
+			<&msm_gpio 31 0>,
+			<&msm_gpio 32 0>;
 		qcom,gpio-tbl-num = <0 1 2 3>;
 		qcom,gpio-tbl-flags = <1 1 1 1>;
 		qcom,gpio-tbl-label = "CCI_I2C_DATA0",
@@ -482,6 +457,7 @@
 	qcom,hw-scl-stretch-en = <0>;
 	qcom,hw-trdhld = <6>;
 	qcom,hw-tsp = <1>;
+	status = "disabled";
 };
 
 &i2c_freq_400Khz {
