--- a/arch/arm/boot/dts/qcom/msm8953-camera.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8953-camera.dtsi
@@ -18,13 +18,13 @@
 		reg-names = "msm-cam";
 		status = "ok";
 		bus-vectors = "suspend", "svs", "nominal", "turbo";
-		qcom,bus-votes = <0 160000000 320000000 320000000>;
+		qcom,bus-votes = <0 320000000 640000000 640000000>;
 	};
 
 	qcom,csiphy@1b34000 {
 		status = "ok";
 		cell-index = <0>;
-		compatible = "qcom,csiphy-v3.4.2", "qcom,csiphy";
+		compatible = "qcom,csiphy-v3.5", "qcom,csiphy";
 		reg = <0x1b34000 0x1000>,
 			<0x1b00030 0x4>;
 		reg-names = "csiphy", "csiphy_clk_mux";
@@ -47,7 +47,7 @@
 	qcom,csiphy@1b35000 {
 		status = "ok";
 		cell-index = <1>;
-		compatible = "qcom,csiphy-v3.4.2", "qcom,csiphy";
+		compatible = "qcom,csiphy-v3.5", "qcom,csiphy";
 		reg = <0x1b35000 0x1000>,
 			<0x1b00038 0x4>;
 		reg-names = "csiphy", "csiphy_clk_mux";
@@ -67,16 +67,39 @@
 		qcom,clock-rates = <0 61540000 200000000 0 0 0 0>;
 	};
 
+	qcom,csiphy@1b36000 {
+		status = "ok";
+		cell-index = <2>;
+		compatible = "qcom,csiphy-v3.5", "qcom,csiphy";
+		reg = <0x1b36000 0x1000>,
+			<0x1b00040 0x4>;
+		reg-names = "csiphy", "csiphy_clk_mux";
+		interrupts = <0 315 0>;
+		interrupt-names = "csiphy";
+		clocks = <&clock_gcc clk_gcc_camss_top_ahb_clk>,
+			<&clock_gcc clk_gcc_camss_ispif_ahb_clk>,
+			<&clock_gcc clk_csi2phytimer_clk_src>,
+			<&clock_gcc clk_gcc_camss_csi2phytimer_clk>,
+			<&clock_gcc clk_camss_top_ahb_clk_src>,
+			<&clock_gcc clk_gcc_camss_csi2phy_clk>,
+			<&clock_gcc clk_gcc_camss_ahb_clk>;
+		clock-names = "camss_top_ahb_clk", "ispif_ahb_clk",
+			"csiphy_timer_src_clk", "csiphy_timer_clk",
+			"camss_ahb_src", "csi_phy_clk",
+			"camss_ahb_clk";
+		qcom,clock-rates = <0 61540000 200000000 0 0 0 0>;
+	};
+
 	qcom,csid@1b30000  {
 		status = "ok";
 		cell-index = <0>;
-		compatible = "qcom,csid-v3.4.3", "qcom,csid";
+		compatible = "qcom,csid-v3.5.1", "qcom,csid";
 		reg = <0x1b30000 0x400>;
 		reg-names = "csid";
 		interrupts = <0 51 0>;
 		interrupt-names = "csid";
-		qcom,csi-vdd-voltage = <1200000>;
-		qcom,mipi-csi-vdd-supply = <&pm8917_l2>;
+		qcom,csi-vdd-voltage = <1225000>;
+		qcom,mipi-csi-vdd-supply = <&pm8953_s3>;
 		clocks = <&clock_gcc clk_gcc_camss_top_ahb_clk>,
 			<&clock_gcc clk_gcc_camss_ispif_ahb_clk>,
 			<&clock_gcc clk_gcc_camss_csi0_ahb_clk>,
@@ -95,13 +118,13 @@
 	qcom,csid@1b30400 {
 		status = "ok";
 		cell-index = <1>;
-		compatible = "qcom,csid-v3.4.3", "qcom,csid";
+		compatible = "qcom,csid-v3.5.1", "qcom,csid";
 		reg = <0x1b30400 0x400>;
 		reg-names = "csid";
 		interrupts = <0 52 0>;
 		interrupt-names = "csid";
-		qcom,csi-vdd-voltage = <1200000>;
-		qcom,mipi-csi-vdd-supply = <&pm8917_l2>;
+		qcom,csi-vdd-voltage = <1225000>;
+		qcom,mipi-csi-vdd-supply = <&pm8953_s3>;
 		clocks = <&clock_gcc clk_gcc_camss_top_ahb_clk>,
 			<&clock_gcc clk_gcc_camss_ispif_ahb_clk>,
 			<&clock_gcc clk_gcc_camss_csi1_ahb_clk>,
@@ -120,13 +143,13 @@
 	qcom,csid@1b30800 {
 		status = "ok";
 		cell-index = <2>;
-		compatible = "qcom,csid-v3.4.3", "qcom,csid";
+		compatible = "qcom,csid-v3.5.1", "qcom,csid";
 		reg = <0x1b30800 0x400>;
 		reg-names = "csid";
 		interrupts = <0 153 0>;
 		interrupt-names = "csid";
-		qcom,csi-vdd-voltage = <1200000>;
-		qcom,mipi-csi-vdd-supply = <&pm8917_l2>;
+		qcom,csi-vdd-voltage = <1225000>;
+		qcom,mipi-csi-vdd-supply = <&pm8953_s3>;
 		clocks = <&clock_gcc clk_gcc_camss_top_ahb_clk>,
 			<&clock_gcc clk_gcc_camss_ispif_ahb_clk>,
 			<&clock_gcc clk_gcc_camss_csi2_ahb_clk>,
@@ -151,8 +174,9 @@
 		interrupts = <0 55 0>;
 		interrupt-names = "ispif";
 		qcom,num-isps = <0x2>;
-		vfe0_vdd_supply = <&gdsc_vfe>;
-		vfe1_vdd_supply = <&gdsc_vfe1>;
+		vfe0-vdd-supply = <&gdsc_vfe>;
+		vfe1-vdd-supply = <&gdsc_vfe1>;
+		qcom,vdd-names = "vfe0-vdd", "vfe1-vdd";
 		clocks = <&clock_gcc clk_gcc_camss_ispif_ahb_clk>,
 			<&clock_gcc clk_gcc_camss_ahb_clk>,
 			<&clock_gcc clk_gcc_camss_top_ahb_clk>,
@@ -250,8 +274,8 @@
 			0xcccc1111	0xcccc1111
 			0xcccc1111	0xcccc1111
 			0xcccc1111	0x00000110>;
-		max-clk-nominal = <400000000>;
-		max-clk-turbo = <432000000>;
+		max-clk-nominal = <320000000>;
+		max-clk-turbo = <465000000>;
 	};
 
 	vfe1: qcom,vfe1@1b14000 {
@@ -300,8 +324,8 @@
 			0xcccc1111	0xcccc1111
 			0xcccc1111	0xcccc1111
 			0xcccc1111	0x00000110>;
-		max-clk-nominal = <400000000>;
-		max-clk-turbo = <432000000>;
+		max-clk-nominal = <320000000>;
+		max-clk-turbo = <465000000>;
 	};
 
 	qcom,vfe {
@@ -315,16 +339,11 @@
 		msm_cam_smmu_cb1: msm_cam_smmu_cb1 {
 			compatible = "qcom,qsmmu-cam-cb";
 			iommus = <&apps_iommu 0x400>,
-				<&apps_iommu 0x2400>;
+				<&apps_iommu 0x2800>;
 			label = "vfe";
 			qcom,scratch-buf-support;
 		};
 
-		msm_cam_smmu_cb2: msm_cam_smmu_cb2 {
-			compatible = "qcom,qsmmu-cam-cb";
-			label = "vfe_secure";
-			qcom,secure-context;
-		};
 
 		msm_cam_smmu_cb3: msm_cam_smmu_cb3 {
 			compatible = "qcom,qsmmu-cam-cb";
@@ -360,13 +379,13 @@
 		qcom,clock-rates = <266670000 0 0 0 0>;
 		qcom,qos-reg-settings = <0x28 0x0000555e>,
 			<0xc8 0x00005555>;
+		qcom,vbif-reg-settings = <0xc0 0x10101000>,
+			<0xb0 0x10100010>;
 		qcom,msm-bus,name = "msm_camera_jpeg0";
 		qcom,msm-bus,num-cases = <2>;
 		qcom,msm-bus,num-paths = <1>;
 		qcom,msm-bus,vectors-KBps = <62 512 0 0>,
-			<62 512 666675 666675>;
-		qcom,vbif-reg-settings = <0xc0 0x10101000>,
-			<0xb0 0x10100010>;
+			<62 512 800000 800000>;
 	};
 
 	qcom,irqrouter@1b00000 {
@@ -382,8 +401,8 @@
 		cell-index = <0>;
 		compatible = "qcom,cpp";
 		reg = <0x1b04000 0x100>,
-			<0x1b80000 0x3000>,
-			<0x1b18000 0x4000>,
+			<0x1b80000 0x200>,
+			<0x1b18000 0x018>,
 			<0x1858078 0x4>;
 		reg-names = "cpp", "cpp_vbif", "cpp_hw", "camss_cpp";
 		interrupts = <0 49 0>;
@@ -401,7 +420,7 @@
 			"camss_vfe_cpp_ahb_clk", "camss_vfe_cpp_axi_clk",
 			"camss_vfe_cpp_clk","micro_iface_clk", "camss_ahb_clk";
 		qcom,clock-rates = <0 180000000 0 0 180000000 0 0>;
-		qcom,min-clock-rate = <133000000>;
+		qcom,min-clock-rate = <100000000>;
 		qcom,bus-master = <1>;
 		qcom,msm-bus,name = "msm_camera_cpp";
 		qcom,msm-bus,num-cases = <2>;
