--- a/arch/arm/boot/dts/qcom/msm8920-pmi8937-rcm.dts
+++ b/arch/arm/boot/dts/qcom/msm8920-pmi8937-rcm.dts
@@ -11,14 +11,14 @@
  * GNU General Public License for more details.
  */
 
-#include "skeleton64.dtsi"
-#include "msm8917.dtsi"
+/dts-v1/;
+
+#include "msm8920.dtsi"
+#include "msm8917-pmi8937-cdp.dtsi"
 
 / {
-	model = "Qualcomm Technologies, Inc. MSM8920";
-	compatible = "qcom,msm8920";
-	qcom,msm-id = <320 0x0>;
-	interrupt-parent = <&intc>;
-
-	soc: soc { };
+	model = "Qualcomm Technologies, Inc. MSM8920-PMI8937 RCM";
+	compatible = "qcom,msm8920-cdp", "qcom,msm8920", "qcom,cdp";
+	qcom,board-id= <21 0>;
+	qcom,pmic-id = <0x10019 0x020037 0x0 0x0>;
 };
