arm/dt: albus/cedric: include individual dtb
Change-Id: Ie571995cd146bdc94c979e3e974ed87e410ee7f3
Signed-off-by: lihf9 <lihf9@lenovo.com>
Reviewed-on: https://gerrit.mot.com/896769
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Yiwen Liu <liuyw2@motorola.com>
Reviewed-by: Christopher Fries <cfries@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -737,6 +737,22 @@ config MSM_PM
 	  determines last CPU to call into PSCI for cluster Low power
 	  modes.
 
+config ALBUS_DTB
+	depends on ARCH_MSM
+	default n
+	bool "Albus DTBs"
+	help
+	  Only include Albus specific DTBs to limit the number that
+	  get built during kernel compilation.
+
+config CEDRIC_DTB
+	depends on ARCH_MSM
+	default n
+	bool "Cedric DTBs"
+	help
+	  Only include Cedric specific DTBs to limit the number that
+	  get built during kernel compilation.
+
 config MSM_PM_LEGACY
 	depends on PM
 	select MSM_IDLE_STATS if DEBUG_FS
