ARM: dts: msm: optimize boot latency with wsa nodes disable
Nodes of wsa 0xe and 0x44 are default disabled.
In internal targets, these nodes are not used
and only 0xf/0x45 are associated with WSA installed.
Update WSA analog driver to handle removal of nodes
0xe/0x44 properly.

Change-Id: Ida93236efe17e28295968f85b7fec68d3861883b
Signed-off-by: Laxminath Kasam <lkasam@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8953-audio-mtp.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8953-audio-mtp.dtsi
@@ -13,21 +13,15 @@
 
 &int_codec {
 	status = "okay";
-	qcom,msm-hs-micbias-type = "external";
-
-	asoc-wsa-codec-names = "wsa881x-i2c-codec.2-000f";
-	asoc-wsa-codec-prefixes = "SpkrMono";
-
-	msm-vdd-wsa-switch-supply = <&pm8937_l13>;
-	qcom,msm-vdd-wsa-switch-voltage = <3075000>;
-	qcom,msm-vdd-wsa-switch-current = <5000>;
+	qcom,model = "msm8953-snd-card-mtp";
+	qcom,msm-hs-micbias-type = "internal";
 };
 
-&pm8937_cajon_dig {
+&pm8953_diangu_dig {
 	status = "okay";
 };
 
-&pm8937_cajon_analog {
+&pm8953_diangu_analog {
 	status = "okay";
 };
 
