--- a/arch/arm/boot/dts/qcom/msm8937-audio-mtp.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8937-audio-mtp.dtsi
@@ -13,14 +13,8 @@
 
 &int_codec {
 	status = "okay";
+	qcom,model = "msm8952-snd-card-mtp";
 	qcom,msm-hs-micbias-type = "external";
-
-	asoc-wsa-codec-names = "wsa881x-i2c-codec.2-000f";
-	asoc-wsa-codec-prefixes = "SpkrMono";
-
-	msm-vdd-wsa-switch-supply = <&pm8937_l13>;
-	qcom,msm-vdd-wsa-switch-voltage = <3075000>;
-	qcom,msm-vdd-wsa-switch-current = <5000>;
 };
 
 &pm8937_cajon_dig {
