msm8953-common: update defconfigs for treble * As pointed out by Erfan some configs need to be set on treble * Fix those who werent Co-authored-by: "erfanoabdi <erfanoabdi@users.noreply.github.com>"

--- a/arch/arm64/configs/montana_defconfig
+++ b/arch/arm64/configs/montana_defconfig
@@ -121,7 +121,7 @@ CONFIG_RCU_NOCB_CPU=y
 CONFIG_RCU_NOCB_CPU_ALL=y
 CONFIG_BUILD_BIN2C=y
 CONFIG_IKCONFIG=y
-# CONFIG_IKCONFIG_PROC is not set
+CONFIG_IKCONFIG_PROC=y
 CONFIG_LOG_BUF_SHIFT=16
 # CONFIG_CONSOLE_FLUSH_ON_HOTPLUG is not set
 CONFIG_LOG_CPU_MAX_BUF_SHIFT=12
@@ -445,6 +445,7 @@ CONFIG_KSWAPD_CPU_AFFINITY_MASK=""
 CONFIG_PROCESS_RECLAIM=y
 CONFIG_SECCOMP=y
 # CONFIG_XEN is not set
+CONFIG_OABI_COMPAT=n
 CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_ARM64_PAN=y
 CONFIG_ARMV8_DEPRECATED=y
