--- a/arch/arm64/configs/addison_defconfig
+++ b/arch/arm64/configs/addison_defconfig
@@ -450,6 +450,7 @@ CONFIG_KSWAPD_CPU_AFFINITY_MASK=""
 CONFIG_PROCESS_RECLAIM=y
 CONFIG_SECCOMP=y
 # CONFIG_XEN is not set
+CONFIG_OABI_COMPAT=n
 CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_UNMAP_KERNEL_AT_EL0=y
 CONFIG_HARDEN_BRANCH_PREDICTOR=y
