--- a/arch/arm64/configs/potter_defconfig
+++ b/arch/arm64/configs/potter_defconfig
@@ -448,6 +448,7 @@ CONFIG_KSWAPD_CPU_AFFINITY_MASK=""
 CONFIG_PROCESS_RECLAIM=y
 CONFIG_SECCOMP=y
 # CONFIG_XEN is not set
+CONFIG_OABI_COMPAT=n
 CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_ARM64_PAN=y
 CONFIG_ARMV8_DEPRECATED=y
