dts: qcom: Add cedric device tree targets
Signed-off-by: Vaisakh Murali <mvaisakh@protonmail.com>

--- a/arch/arm/boot/dts/qcom/Makefile
+++ b/arch/arm/boot/dts/qcom/Makefile
@@ -5,6 +5,14 @@ ifeq ($(CONFIG_MMI_DEVICE_DTBS),y)
 DTC_FLAGS := -p 1024
 
 # Motorola Device Trees
+ifeq ($(CONFIG_CEDRIC_DTB),y)
+dtb-$(CONFIG_ARCH_MSM8937) += msm8937-cedric-p1.dtb \
+	msm8937-cedric-p2.dtb \
+	msm8937-cedric-p3.dtb \
+	msm8937-cedric-p4.dtb \
+	msm8937-cedric-p5.dtb
+endif
+
 dtb-$(CONFIG_ARCH_MSM8998) += msm8998-saratoga-p1.dtb \
 	msm8998-saratoga-p1a.dtb \
 	msm8998-nash-evt1-v2.dtb \
