arm64: defconfig: Add some configs to avoid linking failure
This should solve all linking issues.
Also modify some makefiles to adapt to a few configs

Signed-off-by: mvaisakh <vaisakhmurali@gmail.com>

--- a/arch/arm64/configs/cedric_defconfig
+++ b/arch/arm64/configs/cedric_defconfig
@@ -6,6 +6,7 @@ CONFIG_ARM64=y
 CONFIG_64BIT=y
 CONFIG_ARCH_PHYS_ADDR_T_64BIT=y
 CONFIG_MMU=y
+CONFIG_ARM64_CPUIN=y
 CONFIG_BUILD_ARM64_DT_OVERLAY=y
 CONFIG_ARCH_MMAP_RND_BITS_MIN=18
 CONFIG_ARCH_MMAP_RND_BITS_MAX=24
@@ -191,6 +192,42 @@ CONFIG_PCI_QUIRKS=y
 CONFIG_EMBEDDED=y
 CONFIG_HAVE_PERF_EVENTS=y
 CONFIG_PERF_USE_VMALLOC=y
+
+# New Configs for 4.4
+CONFIG_DMA_MM=y
+CONFIG_MADERA_IRQ=y
+CONFIG_MSM_DBA_ADV7533=y
+CONFIG_REGULATOR_QCOM_SMD_RPM=y
+CONFIG_REGULATOR_RPM_SMD=y
+CONFIG_QSEECOM=y
+CONFIG_MSM_QDSP6V2_CODECS=y
+CONFIG_MSM_ULTRASOUND=y
+CONFIG_DEBUG_FS=y
+CONFIG_SLIMBUS_MSM_NGD=y
+CONFIG_UIO_MSM_SHAREDMEM=y
+CONFIG_INPUT_SX9310=y
+CONFIG_THERMAL_MONITOR=y
+CONFIG_MSM_PM=y
+CONFIG_SWITCH_MADERA=y
+CONFIG_MSM_TZ_LOG=y
+CONFIG_ION=y
+CONFIG_SENSORS_SSC=y
+CONFIG_ARM_GIC_V3=y
+CONFIG_SUSPEND=y
+CONFIG_SOC_MSM=y
+CONFIG_POWER_MSM=y
+CONFIG_SND_SOC_MSM_HDMI_CODEC_RX=y
+CONFIG_MADERA_SOUND=y
+CONFIG_WCD9335_SOUND=y
+CONFIG_WCD_SOUND=y
+CONFIG_SND_SOC_MSM_HOSTLESS_PCM=y
+CONFIG_SND_SOC_MSM8996=y
+CONFIG_MSM_PCM=y
+CONFIG_DOLBY_DAP=y
+CONFIG_DOLBY_DS2=y
+CONFIG_DTS_SRS_TM=y
+CONFIG_AUD_CAL=y
+CONFIG_IPC_ROUTER=y
 
 #
 # Kernel Performance Events And Counters
